<resources>
    <string name="app_name">UI Demo</string>
    <string name="home">Home</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="categories">Categories</string>
    <string name="deals">Deals</string>
    <string name="account">Account</string>
    <string name="notifications">Notifications</string>
    <string name="just_check">just check</string>
    <string name="see_all">See all</string>
    <string name="ads">Ads</string>
    <string name="search_hint">I\'m looking for…</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="username">UserName</string>
    <string name="userid">UserId</string>
    <string name="items_in_your_wish_list">Items in your wish list</string>
    <string name="recently_viewed">Recently Viewed</string>
    <string name="_12">+12</string>
    <string name="apple_galaxy">Apple Galaxy Watches 46mm (New)</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="exclusive">EXCLUSIVE</string>
    <string name="pre_order">PRE-ORDER</string>
    <string name="_1959_qar">1959 QAR</string>
    <string name="sign_in_or_create_an_account">Sign-in or Create an Account</string>
    <string name="you_can_sign_in_or_create_an_new_account">You Can sign in or create an new Account</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_in">SIGN IN</string>
    <string name="celeste_wright">Celeste Wright</string>
    <string name="celeste_wright_gmail_com">celeste_wright@gmail.com</string>
    <string name="my_n_order">My \nOrder</string>
    <string name="my_ntickets">My \nTickets</string>
    <string name="your_point_balance">Your point balance</string>
    <string name="b_3000_b_worth_6oo_qar"><b>3000</b> worth 600 QAR</string>
    <string name="lorem_ipsun">Lorem ipsun</string>
    <string name="lorem_ipsum_set_amet">lorem ipsum set amet lorem ipsum set amet lorem ipsum set amet</string>
    <string name="your_store_credit_is">Your Store Credit is :</string>
    <string name="b_30_b_qar"><b>30</b> QAR</string>
    <string name="Personal_Information">Personal Information</string>
    <string name="Loyalty_Programme">Loyalty Programme</string>
    <string name="Address_Book">Address Book</string>
    <string name="Saved_Cards">Saved Cards</string>
    <string name="My_Reviews">My Reviews</string>
    <string name="My_Returns">My Returns</string>
    <string name="Services">Services</string>
    <string name="Live_Support">Live Support</string>
    <string name="go">Go</string>
    <string name="new_item_available">New Item Available!</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="past_notifications">Past Notifications</string>
    <string name="search">Search</string>
    <string name="setting">Setting</string>
    <string name="language">Language</string>
    <string name="rate_alif_s_app">Rate Alif\'s App</string>
    <string name="share_our_app">Share Our App</string>
    <string name="version">Version</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="_2_factor_authentication">2-Factor Authentication</string>
    <string name="sms_to">SMS to :</string>
    <string name="_545">*******545</string>
    <string name="change_authentication_type">Change Authentication Type</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="_2_5_2">2.5.2</string>
    <string name="add_new_card">Add New Card</string>
    <string name="please_enter_your_card_details">Please enter your card details</string>
    <string name="card_number">Card Number</string>
    <string name="card_holder_name">Card Holder Name</string>
    <string name="expiry_date">Expiry date</string>
    <string name="cvc">CVC</string>
    <string name="save_card_details">SAVE CARD DETAILS</string>
    <string name="default_payment_card">Default Payment Card</string>
    <string name="saved_visa_card">Saved Visa Card</string>
    <string name="_5455">**** **** **** 5455</string>
    <string name="alternate_payment_card">Alternate Payment Card</string>
    <string name="add_new">ADD NEW</string>
    <string name="remove">Remove</string>
    <string name="set_as_default">Set As Default</string>
    <string name="_0_cards">0 cards</string>
    <string name="no_saves_cards">No Saves Cards</string>
    <string name="save_a_credit_card">Save A Credit Card</string>
    <string name="add_a_new_card">ADD A NEW CARD</string>
    <string name="hi_andrew">Hi, Andrew</string>
    <string name="member_since_21_jan_2019">Member since 21 Jan 2019</string>
    <string name="orders">Orders</string>
    <string name="your_statistics">Your Statistics</string>
    <string name="latest_transactions">Latest Transactions</string>
    <string name="spent_point_on_order_no">Spent point on order No </string>
    <string name="_500_point"> Point</string>
    <string name="items_for"> Items for </string>
    <string name="qar"> QAR </string>
    <string name="points_available"> points available</string>
    <string name="_1_jan_2020_10_29">1 Jan 2020 10:29</string>
    <string name="view_order">VIEW ORDER</string>
    <string name="orders_amount">Orders Amount</string>
    <string name="expiry_30_30_2022">Expiry 30/30/2022</string>
    <string name="_25">25</string>
    <string name="_10000_qar">10000 QAR</string>
    <string name="_266_point">266 point</string>
    <string name="my_tickets">My Tickets</string>
    <string name="all">All</string>
    <string name="events">Events</string>
    <string name="activities">Activities</string>
    <string name="adult__">ADULT | </string>
    <string name="_123456789">#123456789</string>
    <string name="date">Date</string>
    <string name="productcon_london_the_product_management_conference">ProductCon London : The Product Management Conference</string>
    <string name="from_">From: </string>
    <string name="to_">TO: </string>
    <string name="time">Time</string>
    <string name="_3_pm_7pm">3 PM - 7PM</string>
    <string name="download_ticket">DOWNLOAD TICKET</string>
    <string name="small_qar"><small>QAR</small></string>
    <string name="review">Review</string>
    <string name="my_orders">My Orders</string>
    <string name="look_below_and_go_to_ordered_items_to_review">look below and go to ordered items to review</string>
    <string name="you_haven_t_given_any_reviews">You haven\'t given any reviews</string>
    <string name="_2_reviews">2 reviews</string>
    <string name="review_more_purchases">Review More Purchases</string>
    <string name="view_details">View Details</string>
    <string name="rating">Rating</string>
    <string name="created">created</string>
    <string name="by_date_added">By date added</string>
    <string name="qty">QTY :</string>
    <string name="price">Price :</string>
    <string name="total">Total :</string>
    <string name="past_event">PAST EVENT</string>
    <string name="default_shipping_address">Default Shipping Address</string>
    <string name="edit">Edit</string>
    <string name="tvusername">tvUserName</string>
    <string name="alternate_shipping_address">Alternate Shipping Address</string>
    <string name="address_book">Address Book</string>
    <string name="default_addresses">Default Addresses</string>
    <string name="alternate_addresses">Alternate Addresses</string>
    <string name="add_new_address">ADD NEW ADDRESS</string>
    <string name="edit_shipping_address">Edit Shipping Address</string>
    <string name="save_address">SAVE ADDRESS</string>
    <string name="contact_information">Contact Information</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="street_address_2">Street Address 2</string>
    <string name="street_address">Street Address</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="zone_number">Zone Number</string>
    <string name="country">Country</string>
    <string name="search_by_zone_number">search by zone number</string>
    <string name="search_by_country_name">search by country name</string>
    <string name="blank"> </string>
    <string name="more">more</string>
    <string name="item">Item : <![CDATA[<b>%s</b>]]></string>
    <string name="sent_date">Sent Date : <![CDATA[<b>%s</b>]]></string>
    <string name="status">Status : <![CDATA[<b>%s</b>]]></string>
    <string name="repaired_items">Repaired Items</string>
    <string name="under_maintenance">Under maintenance</string>
    <string name="_12_12">12:12</string>
    <string name="your_order_has_successfully_verified">Your order has successfully verified</string>
    <string name="latest_updates">Latest updates</string>
    <string name="write_yut_comment_here">Write your Comment here</string>
    <string name="submit_comment">Submit comment</string>
    <string name="edit_your_info">Edit Your Information</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="name">Name</string>
    <string name="email_address">Email Address</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="leading_and_trailing_spaces_will_be_ignored">Leading and trailing spaces will be ignored</string>
    <string name="password_length_should_be_not_less_than_8_symbols">Password length should be not less than 8 symbols.</string>
    <string name="don_t_remember_old_password">Don\'t remember old password ?</string>
    <string name="reset_your_password_with_otp">Reset your password with OTP</string>
    <string name="edit_personal_information">Edit Personal information</string>
    <string name="confirm_and_save">Confirm and save</string>
    <string name="confirm_your_mobile_number_with_the_otp">Confirm your mobile number with the OTP</string>
    <string name="please_enter_4_digit_code_just_sent_to_this_number">Please enter 4-digit code just sent to this number</string>
    <string name="did_not_receive_an_sms">Did not receive an SMS?</string>
    <string name="resend_code">Resend code</string>
    <string name="big_black_dot">⚫</string>
    <string name="view_return">View Return</string>
    <string name="rma">RMA</string>
    <string name="order">Order #</string>
    <string name="amount">Amount</string>
    <string name="shipping_source">Shipping Source</string>
    <string name="return_status">Return Status</string>
    <string name="rma_358056182">RMA: </string>
    <string name="processing">Processing</string>
    <string name="our_customer_service_will_be_in_touch_soon">Our customer service will be in touch soon</string>
    <string name="completed">Completed</string>
    <string name="pending">Pending</string>
    <string name="please_be_aware_this_is_a_preorder_the_products_will_be_shipped_to_you_once_they_become_available">Please be aware this is a preorder. The products will be shipped to you once they become available</string>
    <string name="your_wishlist_is_empty">Your Wishlist is empty</string>
    <string name="to_add_some_items_see_our_categories">To add some items see our categories</string>
    <string name="shop_categories">Shop Categories</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="your_cart_is_empty">Your Cart is empty</string>
    <string name="_2_items_for_total_2500_qar">2 items for total 2500 QAR</string>
    <string name="you_might_be_interested_in">You might be interested in</string>
    <string name="checkout">Checkout</string>
    <string name="order_subtotal_3_items">Order Subtotal (3 items)</string>
    <string name="_15990_qar">15990 QAR</string>
</resources>