<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.EmptyCartFragment"
    android:orientation="vertical"
    android:background="@color/gray">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="22sp"
        android:layout_margin="15dp"
        android:text="@string/shopping_cart"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:src="@drawable/ic_baseline_shopping_cart_24"
        android:tint="@color/gray_BBBBBB"
        android:layout_margin="20dp"/>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:gravity="center_horizontal"
        android:text="@string/your_cart_is_empty"/>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/to_add_some_items_see_our_categories"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnShopCategories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shop_categories"
        android:backgroundTint="@color/yellow"
        app:elevation="10dp"
        android:layout_gravity="center_horizontal"
        app:cornerRadius="5dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_margin="5dp"
        android:paddingHorizontal="40dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="5dp"
        android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvRecentListTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:lines="1"
            android:text="@string/recently_viewed"
            android:textColor="@color/black"
            android:ellipsize="end"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnRecentListAll"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_baseline_arrow_circle_right_24"
            android:text="@string/see_all"
            android:textColor="@color/black" />


    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcvRecentList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>