<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.fragment.LoginFragment"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/account_icon"
        app:tint="@color/dark_gray" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/sign_in_or_create_an_account"
        android:textColor="@color/black"/>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:text="@string/you_can_sign_in_or_create_an_new_account"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sign_up"
            android:textColor="@color/teal_500"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_marginEnd="10dp"
            android:paddingHorizontal="35dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSignin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sign_in"
            android:backgroundTint="@color/yellow"
            app:elevation="10dp"
            app:cornerRadius="5dp"
            android:textColor="@color/black"
            android:paddingHorizontal="35dp"/>

    </LinearLayout>




</LinearLayout>