<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.SavedCardsFragment"
    android:orientation="vertical"
    android:background="@color/gray">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/layoutNotificationFrgAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/Notificationtoolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginVertical="2dp"
                android:background="@drawable/searchview_drawable"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:text="@string/Saved_Cards"/>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="11sp"
                    android:gravity="center"
                    android:text="@string/_0_cards"/>


            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/cards_big"
            app:tint="@color/dark_gray" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/no_saves_cards"
            android:textColor="@color/black"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:layout_marginVertical="2dp"
            android:text="@string/save_a_credit_card"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSvCardAddANewCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_a_new_card"
            android:backgroundTint="@color/yellow"
            app:elevation="10dp"
            android:layout_marginVertical="5dp"
            app:cornerRadius="5dp"
            android:textColor="@color/black"
            android:paddingHorizontal="35dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvSvCardRecentListTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:lines="1"
            android:text="@string/recently_viewed"
            android:textColor="@color/black"
            android:ellipsize="end"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnSvCardRecentListAll"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_baseline_arrow_circle_right_24"
            android:text="@string/see_all"
            android:textColor="@color/black" />


    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcvSvCardRecentList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>