<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.NoReviewFragment"
    android:orientation="vertical"
    android:gravity="center">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/account_icon"
        app:tint="@color/dark_gray" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/you_haven_t_given_any_reviews"
        android:textColor="@color/black"/>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:text="@string/look_below_and_go_to_ordered_items_to_review"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGoToOrders"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_orders"
        android:backgroundTint="@color/yellow"
        app:elevation="10dp"
        app:cornerRadius="5dp"
        android:textColor="@color/black"
        android:paddingHorizontal="50dp"/>

</LinearLayout>