<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/gray"
    tools:context=".ui.fragment.ShoppingCart2PreOrderFragment"
    android:orientation="vertical">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvProcessingMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/please_be_aware_this_is_a_preorder_the_products_will_be_shipped_to_you_once_they_become_available"
        android:textColor="@color/white"
        android:padding="15dp"
        android:background="@color/teal_700"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        tools:context=".ui.fragment.FilledCartFragment"
        android:layout_weight="1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/labelShoppingCart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="22sp"
                android:text="@string/shopping_cart"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="10dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvCartTotalItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_2_items_for_total_2500_qar"
                android:layout_marginHorizontal="5dp"
                app:layout_constraintBottom_toBottomOf="@id/labelShoppingCart"
                app:layout_constraintLeft_toRightOf="@id/labelShoppingCart" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcvOrderItems"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                android:layout_margin="10dp"
                app:layout_constraintTop_toBottomOf="@id/labelShoppingCart"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/labelInterested"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:lines="1"
                android:text="@string/you_might_be_interested_in"
                android:textColor="@color/black"
                android:ellipsize="end"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_margin="15dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rcvOrderItems" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcvInterestedList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                app:layout_constraintTop_toBottomOf="@id/labelInterested"
                app:layout_constraintLeft_toLeftOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
    <LinearLayout
        android:id="@+id/layoutProceed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginTop="10dp"
        android:layout_gravity="bottom">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="25dp"
            android:paddingVertical="8dp"
            android:layout_weight="1">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/order_subtotal_3_items" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/_15990_qar" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCheckOut"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:backgroundTint="@color/yellow"
            android:text="@string/checkout"
            android:gravity="center"
            android:textColor="@color/black"
            android:insetBottom="0dp"
            android:insetTop="0dp"
            app:cornerRadius="0dp"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>